--- a/index.html
+++ b/index.html
@@ -32,12 +32,12 @@
              <div class="item">
                 <img id="certify" src="cafe.jpeg"  href="cafe.jpeg"/>
                 <br/>
-                <h5>網頁連結</h5>
+                <a href="https://lara0802.github.io/practice-LC/">網頁連結</a>
             </div>
             <div class="item">
                 <img id="certify" src="cs.jpeg"  href="cs.jpeg"/>
                 <br/>
-                <h5>網頁連結</h5>
+                <a href="https://lara0802.github.io/practicw-SA/">網頁連結</a>
             </div>
         </article>
         </ul>
