修改“想對我們說的事”

--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
     <h2>如果參與這個訓練，會怎麼安排學習時間？</h2>
         <h4>在2023年12月退伍後，我利用3個月完成退輔會報到、退伍金的理財規劃、處理好家庭生活瑣事並安排愛爾蘭留學申請期程。</h4>
         <h4>4月課程開始直到畢業，除適度運動及維持英文能力外，<a>我將全心投入課程任務，有充足的時間應對每週40～60小時的學習份量</a>。</h4>
-        <h4>說明會中強調訓練學員將不斷面對困難，但我對於自己的學習能力、邏輯思考及毅力有信心可以跟上課程。 </h4>
+        <h4>說明會中強調將訓練學員不斷面對困難，我對於自己的學習能力、邏輯思考及毅力有信心可以跟上課程。 </h4>
     <h2>是否有想要加入的公司？為什麼想加入該公司？</h2>
         <h4>我希望加入Google位於愛爾蘭的歐洲總部，原因有以下幾點：</h4>
         <ul>
@@ -62,16 +62,15 @@
         </h4>
     <h2>關於這份申請網頁，分享一個開發時的技術心得。</h2>
         <h4>以前習慣讀懂課本、看完教學影片後在練習實作，但因為內容太多，常做到一半卡住又要回頭翻課本。
-            但這次我嘗試先理解基礎架構，跳過眾多的元素、屬性，先開始寫申請網頁，需要時在針對性的看影片學習，這讓我更有效率的完成申請書，且使用過的元素也更容易記住。
+            這次我嘗試先理解基礎架構，跳過眾多的元素、屬性，先開始寫申請網頁，需要時再針對性的看影片學習，這讓我更有效率的完成申請書，且使用過的元素也更容易記住。
         </h4>
     <h2>請用簡短兩三句話，描述對你而言，最重要的一項人際交往原則。</h2>
         <h4>在不勉強自己的前提下交朋友，欣賞並學習旁人的優點。</h4>
     <h2>其他想要對我們說的事情？</h2>
         <h4>
             <ol>
-                <li>我規劃2025秋季入學愛爾蘭 MSc Computer Science (Conversion) at UCD</li>
-                <li>聯成電腦的課程以傳統教學模式專注於Java上，相比起單一的語言，我認為更需要了解整個電腦科學的基礎知識及獨立學習的能力，所以報名了WeHelp的訓練，但入學前兩邊都會完成。</li>
-                <li>我的目標是在申請學校前累積作品，嘗試申請非Conversion的課程。</li>
+                <li>我規劃2025秋季入學愛爾蘭 MSc Computer Science (Conversion) at UCD，並希望透過累積作品，嘗試申請非Conversion的課程</li>
+                <li>說明會提到訓練結束後有履歷診斷及指導，並追蹤畢業學員就業狀況，因此畢業後在準備申請學校同時我也想試試自己能夠獲得怎麼樣的工作機會。</li>
             </ol>
         </h4>
     </div>
