改變字體大小4

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <h2>兩百字內的個人簡介</h2>
         <h4>我是高琳，畢業於國防大學理工學院的環境資訊及工程學系軍事工程組，於2018年畢業後在陸軍第十軍團各所屬單位歷練領導及幕僚職，並於2023年12月退伍。</h4>
         <h4>這5年間，我學會管理超過百人的團隊，且於2022年因表現優異獲頒陸軍獎狀；也在幕僚職上學習到專案管理及如何以專業立場與上司溝通。</h4>
-        <h4>然而對軍職體系有所瞭解後，確定此非我熱情所在，我決定轉往軟體產業並規劃<a>2025年前往愛爾蘭</a>發展。</h4>
+        <h4>然而對軍職體系有所瞭解後，確定此非我熱情所在，我決定轉往軟體產業並規劃<span>2025年前往愛爾蘭</span>發展。</h4>
     <h2>為了成為軟體工程師，做過什麼努力？若有具體作品請分享給我們。</h2>
         <ul>
             <li>聯成電腦Java基礎班，利用假日學習</li>
@@ -43,7 +43,7 @@
         </ul>
     <h2>如果參與這個訓練，會怎麼安排學習時間？</h2>
         <h4>在2023年12月退伍後，我利用3個月完成退輔會報到、退伍金的理財規劃、處理好家庭生活瑣事並安排愛爾蘭留學申請期程。</h4>
-        <h4>4月課程開始直到畢業，除適度運動及維持英文能力外，<a>我將全心投入課程任務，有充足的時間應對每週40～60小時的學習份量</a>。</h4>
+        <h4>4月課程開始直到畢業，除適度運動及維持英文能力外，<span>我將全心投入課程任務，有充足的時間應對每週40～60小時的學習份量</span>。</h4>
         <h4>說明會中強調將訓練學員不斷面對困難，我對於自己的學習能力、邏輯思考及毅力有信心可以跟上課程。 </h4>
     <h2>是否有想要加入的公司？為什麼想加入該公司？</h2>
         <h4>我希望加入Google位於愛爾蘭的歐洲總部，原因有以下幾點：</h4>
