--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
             <div class="item">
                 <img id="certify" src="ist.jpeg" alt="IST認證"/>
                 <br/>
-                <h5>IST認證</h5>
+                <a>IST認證</a>
             </div>
              <div class="item">
                 <img id="certify" src="cafe.jpeg"  href="cafe.jpeg"/>
